[package]
name = "uptrace"
version = "0.1.4"
edition = "2021"
license-file = "./LICENSE"
description = "OpenTelemetry Rust distribution for Uptrace"
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.18.0", features = ["metrics", "rt-tokio"] }
thiserror = "1.0.38"
url = "2.3.1"
opentelemetry-otlp = { version = "0.11.0", features = [
    "tonic",
    "metrics",
    "tls",
    "tls-roots",
] }
hostname = "0.3.1"
tonic = { version = "0.8.3", features = ["tls"] }

[dev-dependencies]
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
