[package]
name = "otlp-metrics"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
lazy_static = "1.4"
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.12", features = ["tonic", "metrics", "tls", "tls-roots"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.8.3", features = ["tls"] }
