[package]
name = "otlp-traces"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
lazy_static = "1.4"
opentelemetry = { version = "0.22", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic", "metrics", "tls", "tls-roots"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
